--- a/1-Entrega-CsaFINAL.html
+++ b/1-Entrega-CsaFINAL.html
@@ -24,7 +24,6 @@
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <script src="site_libs/navigation-1.1/codefolding.js"></script>
-<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -440,12 +439,12 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.HTML">Paper</a>
+  <a href="1-Entrega-CsaFINAL.hmtl">Paper</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="catalina.vidal@ug.uchile.cl">
+  <a href="carlos.arriagada@ug.uchile.cl">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
