cambio principal en _site, nombre de paper con html a HTML

--- a/1-Entrega-CsaFINAL.html
+++ b/1-Entrega-CsaFINAL.html
@@ -24,6 +24,7 @@
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <script src="site_libs/navigation-1.1/codefolding.js"></script>
+<script src="site_libs/accessible-code-block-0.0.1/empty-anchor.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
 <link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
@@ -439,12 +440,12 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.hmtl">Paper</a>
+  <a href="1-Entrega-CsaFINAL.HTML">Movilidad social en Chile.</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-  <a href="carlos.arriagada@ug.uchile.cl">
+  <a href="catalina.vidal@ug.uchile.cl">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -473,7 +474,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">Documento abierto y transparente, CSA</h1>
-<h4 class="date">29-07-2020</h4>
+<h4 class="date">30-07-2020</h4>
 
 </div>
 
