--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ $(document).ready(function () {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.HTML">Movilidad social en Chile.</a>
+  <a href="1-Entrega-CsaFINAL.html">Movilidad social en Chile.</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
