--- a/1-Entrega-CsaFINAL.html
+++ b/1-Entrega-CsaFINAL.html
@@ -440,7 +440,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.HTML">Movilidad social en Chile.</a>
+  <a href="1-Entrega-CsaFINAL.html">Movilidad social en Chile.</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
