--- a/1-Entrega-CsaFINAL.html
+++ b/1-Entrega-CsaFINAL.html
@@ -435,12 +435,12 @@ div.tocify {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Ejemplo WEB</a>
+      <a class="navbar-brand" href="index.html">Sitio WEB</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.html">Movilidad social en Chile.</a>
+  <a href="1-Entrega-CsaFINAL.html">Paper</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
