--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
 
 
-<title>Movilidad social en Chile.</title>
+<title>Movilidad social en Chile</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/bootstrap.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -270,12 +270,12 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Ejemplo WEB</a>
+      <a class="navbar-brand" href="index.html">Sitio WEB</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="1-Entrega-CsaFINAL.html">Movilidad social en Chile.</a>
+  <a href="1-Entrega-CsaFINAL.html">Paper</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -300,7 +300,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Movilidad social en Chile.</h1>
+<h1 class="title toc-ignore">Movilidad social en Chile</h1>
 
 </div>
 
